# agentperms

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: agentperms.yml  release.yml
examples/policies/: example.mcp.policy.yaml
examples/vulnerable-mcp-demo/: mcp.json  server.py
src/agentperms/: __init__.py  __main__.py  cli.py  config.py  models.py  wiring.py
src/agentperms/inference/: __init__.py  least_privilege.py
src/agentperms/lockfile/: __init__.py  manifest.py
src/agentperms/mcp_proxy/: __init__.py  client.py  jsonrpc.py  policy_engine.py  stdio_proxy.py
src/agentperms/recorder/: __init__.py  redactor.py  trace_store.py
src/agentperms/replay/: __init__.py  attack_pack.py
src/agentperms/reports/: __init__.py  report.py
src/agentperms/reports/templates/: report.html.j2
src/agentperms/scanner/: __init__.py  base.py  generic.py  rules.py
src/agentperms/templates/: github_action.yml.j2
tests/: test_inference.py  test_lockfile.py  test_policy_engine.py  test_proxy_roundtrip.py  test_redactor.py  test_scanner.py  test_wiring.py
